# allcoder

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  eslint.config.cjs  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
docs/notes/: New Empty File  New Empty File 1  New Empty File 2  New Empty File 3  New Empty File 4  New Empty File 5  New Empty File 6
scripts/: release.sh
src/: cli.ts  formats.ts  index.ts  json.ts  merge.ts  redact.ts
src/allcoder/: __init__.py  api.py  cli.py  io_utils.py  merge_utils.py  redact_utils.py
tests/: formats.test.ts  json.test.ts  merge_redact.test.ts  test_api.py  test_cli.py  validate_schema_errors.test.ts
ts/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json  tsconfig.json
ts/src/: api.ts  index.ts
ts/test/: api.test.ts  lib.test.ts
